# InfraRedControl

./: .gitignore  InfraRedControl.cabal  README.md  stack.yaml
src/: Main.hs  TypedIO.hs
