name:                 InfraRedControl
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               simon.bourne
maintainer:           simonbourne@enhedron.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable InfraRedControl
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5,
                        directory -any,
                        IfElse -any,
                        linux-evdev -any,
                        monad-loops -any,
                        process -any,
                        time -any

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
                        -Werror
                        -fwarn-incomplete-record-updates
                        -fwarn-monomorphism-restriction
                        -fwarn-identities
                        -fwarn-unused-binds
                        -j8
